crates/wdk-macros/tests/non-nightly/trybuild/wdf_driver_create_wrong_arg_order.stderr
error[E0308]: arguments to this function are incorrect
 --> tests/non-nightly/trybuild/wdf_driver_create_wrong_arg_order.rs
  |
  | /         wdk_macros::call_unsafe_wdf_function_binding!(
  | |             WdfDriverCreate,
  | |             driver as PDRIVER_OBJECT,
  | |             registry_path,
  | |             // The order of the next two arguments is swapped!
  | |             &mut driver_config,
  | |             ------------------ expected `*mut _WDF_OBJECT_ATTRIBUTES`, found `&mut _WDF_DRIVER_CONFIG`
  | |             WDF_NO_OBJECT_ATTRIBUTES,
  | |             ------------------------ expected `*mut _WDF_DRIVER_CONFIG`, found `*mut _WDF_OBJECT_ATTRIBUTES`
  | |             driver_handle_output,
  | |         )
  | |_________^
  |
  = note: this error originates in the macro `wdk_macros::call_unsafe_wdf_function_binding` (in Nightly builds, run with -Z macro-backtrace for more info)
help: swap these arguments
  |
27 ~         )(wdk_macros::call_unsafe_wdf_function_binding!(
28 +             WdfDriverCreate,
29 +             driver as PDRIVER_OBJECT,
30 +             registry_path,
31 +             // The order of the next two arguments is swapped!
32 +             &mut driver_config,
33 +             WDF_NO_OBJECT_ATTRIBUTES,
34 +             driver_handle_output,
35 +         ), driver as PDRIVER_OBJECT, registry_path, WDF_NO_OBJECT_ATTRIBUTES, &mut driver_config, driver_handle_output)
   |
